--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       src="https://kit.fontawesome.com/154b4b5138.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Form: Sign in | up</title>
   </head>
   <body>
@@ -86,7 +86,7 @@
             </p>
             <button class="btn transparent" id="sign-up-btn">Registrarse</button>
           </div>
-          <img src="img/sign.svg" class="image" alt="" />
+          <img src="./img/sign.svg" class="image" alt="" />
         </div>
         <div class="panel right-panel">
           <div class="content">
@@ -96,11 +96,11 @@
             </p>
             <button class="btn transparent" id="sign-in-btn">Inicia Sesión</button>
           </div>
-          <img src="img/register.svg" class="image" alt="" />
+          <img src="./img/register.svg" class="image" alt="" />
         </div>
       </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
